--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_overboard: ^1.1.5
   fluttertagselector: ^0.0.3
+  fl_chart: ^0.2.0
 
 dev_dependencies:
   flutter_test:
