--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_overboard: ^1.1.5
   fluttertagselector: ^0.1.0
   fl_chart: ^0.10.0
+  page_transition: "^1.1.5"
 
 dev_dependencies:
   flutter_test:
