ADD COSTUM BUTTOM

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   charts_common: ^0.8.1
   charts_flutter: ^0.8.1
   font_awesome_flutter: ^8.8.1
+  progress_state_button: ^1.0.1
 
 dev_dependencies:
   flutter_test:
