--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,4 +61,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+
 }
