--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   progress_state_button: ^1.0.1
   firebase_auth: ^0.16.1
   firebase_database: ^3.1.6
+  provider: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
